--- a/traefik/traefik.toml
+++ b/traefik/traefik.toml
@@ -4,11 +4,14 @@
 
 debug = false
 logLevel = "ERROR"
-defaultEntryPoints = ["http"]
+defaultEntryPoints = ["http", "https"]
 
 [entryPoints]
     [entryPoints.http]
     address = ":80"
+    [entryPoints.https]
+    address = ":443"
+        [entryPoints.https.tls]
 
 # use default stdout. this allows for using any log driver to pipe logs
 # to a third party service.
@@ -42,18 +45,10 @@ exposedbydefault = true
 
 watch = true
 
-################################################################
-# File configuration backend
-################################################################
-[file]
+[ecs]
 
-[backends]
-  [backends.userspace]
-    [backends.userspace.servers.manager_1]
-    url = "http://192.168.8.100:5000"
+clusters = ['illumidesk']
 
-[frontends]
-  [frontends.userspace]
-  backend = "userspace"
-    [frontends.userspace.routes.server]
-    rule = "PathPrefix:/{version}/{namespace}/projects/{project}/servers/{server}/endpoint"
+watch = true
+
+region = "us-east-1"
